--- a/1.html
+++ b/1.html
@@ -21,6 +21,23 @@ Offline analysis: Trace data can be collected on one machine and analyzed on ano
 Profiling Modes: Offers sampling (for general overview) and tracing (for exact, detailed measurements).
 Filtering: Allows developers to specify exactly what code they want to profile.
 Plugins and Rulesets: Extensible to capture and display specific data for custom use cases</p>
+
+	<h1> CodeTrac (MeritTrac - Coding Assessment Tool)</h1>
+
+	<p>What it is: This is a state-of-the-art coding assessment tool developed by MeritTrac. It's designed to evaluate programming skills for hiring, training, and upskilling purposes.
+Key Features:
+Comprehensive Skill Evaluation: Assesses coding proficiency, problem-solving abilities, and technical expertise across various programming languages.
+Real-World Coding Challenges: Uses scenario-based tests to mimic real-world problems.
+Scalable Platform: Suitable for assessing large numbers of candidates.
+Customizable Assessments: Allows organizations to design role-specific tests.
+Actionable Insights: Provides detailed performance reports.
+Real-Time Coding Environment: Simulates a live coding experience.
+Automated Scoring: Uses AI-driven scoring for consistent and unbiased evaluation.
+Secure and Scalable: Advanced security protocols for assessments.
+Use Cases:
+Hiring developers (screening, interviews).
+Internal training and upskilling programs.
+Academic institutions for evaluating student coding skills</p>
 <script>
         // This JavaScript runs when the page loads
         document.addEventListener('DOMContentLoaded', function() {
