--- a/1.html
+++ b/1.html
@@ -38,6 +38,16 @@ Use Cases:
 Hiring developers (screening, interviews).
 Internal training and upskilling programs.
 Academic institutions for evaluating student coding skills</p>
+	<h1> TraceMaster CodeTrack (Macro 4 - CICS Code Assurance Solution)</h1>
+
+	<p>What it is: A specialized tool from Macro 4 for CICS (Customer Information Control System) environments on z/OS. It focuses on improving code quality, security, and performance for mainframe applications.
+Key Features:
+CICS Code Path Analysis: Monitors every instruction executed by a targeted CICS program, providing insights into executed/non-executed code, hotspots, and redundant code. This helps verify the extent of testing.
+Storage Violation Detection: Tracks the execution paths of CICS applications and prevents unauthorized memory updates, which are critical for system stability.
+Easy Upkeep: Minimal setup and maintenance.
+Pre-emptive Processing: Proactive prevention of issues.
+Flexible Error Handling: Options for how storage violations are handled (logging, dumping, abending).</p>
+
 <script>
         // This JavaScript runs when the page loads
         document.addEventListener('DOMContentLoaded', function() {
